--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^16.13.1",
     "react-final-form": "latest",
+    "react-google-button": "^0.7.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
