--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^3.2.1",
     "date-fns": "^2.0.0",
     "dotenv": "^9.0.2",
+    "emailjs-com": "^2.6.4",
     "final-form": "latest",
     "final-form-material-ui": "0.3.0",
     "firebase": "^8.4.3",
