--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.11.5",
     "react-final-form": "latest",
     "react-google-button": "^0.7.2",
     "react-redux": "^7.2.4",
@@ -34,6 +35,7 @@
     "recharts": "^2.0.9",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.0",
     "sweetalert2": "^10.16.7",
     "swiper": "^6.3.5"
   },
