--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.7.0",
     "mercadopago": "^1.5.7",
+    "nodemailer": "^6.6.1",
+    "nodemailer-handlebars": "^1.0.1",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
